maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: type mismatch;
 found   : Unit
 required: Int
      case 0 => etat = courrirNord()
                                  ^IslandMaze:7: error: type mismatch;
 found   : Unit
 required: Int
      case 1 => etat = suivreGauche()
                                   ^IslandMaze:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    0
    ^IslandMaze:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    1
    ^