maze.island.IslandMaze.scala.code
override def run() {
  var etat = 0
  while (!estSurBiscuit()) {
    etat match {
      case 0 => etat = courrirNord()
      case 1 => etat = suivreGauche()
      case _ => println("error")
    }
  }
  prendBiscuit()
}

def courrirNord() {
  setDirection(Direction.NORTH)
  if (!estFaceMur()) { 
    avance() 
    0
  } else {
    1
  }
}

def suivreGauche() {
  keepHandOnSideWall()
}

def keepHandOnSideWall() {
  gauche()
  if (!estFaceMur()) {
    avance()
  } else  {
    while (estFaceMur()) {
      droite()
    }
    avance()
  }
}